# heapbuf

./: Cargo.toml  README.md  test.sh
src/: buf.rs  destructor.rs  lib.rs  sync_ptr.rs
tests/: buf_test.rs  destructor_tests.rs  example.rs  rw_tests.rs
