[package]
name = "heap_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1.19.0"
half = { version = "^2.4.0", optional = true}
f128 = { version = "^0.2.9", optional = true}
uintx = { version = "0.0.1", optional = true}

[features]
all = ["uintx_support", "f16_support", "f128_support"]
f16_support = ["half"]
f128_support = ["f128"]
uintx_support = ["uintx"]

[dev-dependencies]
lazy_static = "1.4.0"
static_assertions = "1.1.0"