[package]
name = "heapbuf"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["pointer", "heap", "buffer", "unaligned"]
categories = ["memory-management"]
description = "Fixed size heap buffer with optional custom alignment, ref counting and custom destructor logic."
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/heapbuf"


[dependencies]
half = { version = "^2.4.1", optional = true}
f128 = { version = "^0.2.9", optional = true}
uintx = { version = "^0.1.0", optional = true}
sync-ptr = "^0.1.1"

[features]
all = ["uintx_support", "f16_support", "f128_support"]
f16_support = ["half"]
f128_support = ["f128"]
uintx_support = ["uintx"]

[dev-dependencies]
lazy_static = "1.5.0"
static_assertions = "1.1.0"
rw-utils = { version = "0.0.1", features = ["all"] }


[profile.dev]
#debug = 2
#opt-level = 3